# bump_fetchcontent

./: README.md  action.yml  dry_run.py  pyproject.toml
bump_fetchcontent/: bump_fetchcontent.py  core.py
